RESOLVED FIXED149650
WebKitTestRunner fails to apply "useFlexibleViewport" when it's specified in a file comment
https://bugs.webkit.org/show_bug.cgi?id=149650
Summary WebKitTestRunner fails to apply "useFlexibleViewport" when it's specified in ...
Simon Fraser (smfr)
Reported 2015-09-29 15:58:52 PDT
WebKitTestRunner fails to apply "useFlexibleViewport" when it's specified in a file comment
Attachments
Patch (19.76 KB, patch)
2015-09-29 16:01 PDT, Simon Fraser (smfr)
no flags
Patch (19.84 KB, patch)
2015-09-29 16:17 PDT, Simon Fraser (smfr)
no flags
Patch (22.98 KB, patch)
2015-09-29 17:32 PDT, Simon Fraser (smfr)
no flags
Patch (25.97 KB, patch)
2015-09-29 17:46 PDT, Simon Fraser (smfr)
no flags
Patch (25.83 KB, patch)
2015-09-29 17:57 PDT, Simon Fraser (smfr)
no flags
Patch (26.48 KB, patch)
2015-09-29 18:04 PDT, Simon Fraser (smfr)
simon.fraser: review+
Simon Fraser (smfr)
Comment 1 2015-09-29 16:01:21 PDT
Simon Fraser (smfr)
Comment 2 2015-09-29 16:17:25 PDT
Simon Fraser (smfr)
Comment 3 2015-09-29 17:32:38 PDT
Simon Fraser (smfr)
Comment 4 2015-09-29 17:46:32 PDT
Simon Fraser (smfr)
Comment 5 2015-09-29 17:57:56 PDT
Simon Fraser (smfr)
Comment 6 2015-09-29 18:04:43 PDT
Simon Fraser (smfr)
Comment 7 2015-09-29 18:10:57 PDT
Comment on attachment 262128 [details] Patch Tim reviewed this.
Simon Fraser (smfr)
Comment 8 2015-09-29 18:21:07 PDT
Note You need to log in before you can comment on or make changes to this bug.